--- a/babyno.top/使用Python和OpenGL渲染PS2存档3D图标.html
+++ b/babyno.top/使用Python和OpenGL渲染PS2存档3D图标.html
@@ -24,8 +24,8 @@ categories:</li>
 <li>ModernGL</li>
 <li>PyGLM</li>
 </ul>
-<h2>01 初始化<code>PyGame</code>和`ModernGL</h2>
-<p><code>第一步先初始化</code>PyGame<code>，设置窗口大小为</code>640x480<code>，</code>FPS<code>为</code>60<code>。开启</code>OpenGL<code>渲染模式，</code>OpenGL<code>的版本号设置为</code>3.3`。</p>
+<h2>01 初始化<code>PyGame</code>和<code>ModernGL</code></h2>
+<p>第一步先初始化<code>PyGame</code>，设置窗口大小为<code>640x480</code>，<code>FPS</code>为<code>60</code>。开启<code>OpenGL</code>渲染模式，<code>OpenGL</code>的版本号设置为<code>3.3</code>。</p>
 <pre><code class="lang-python">import pygame as pg
 
 pg.init()
