--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 51 个博客、8869 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 51 个博客、8870 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=babyno.top/%E9%9A%90%E7%A7%81%E6%94%BF%E7%AD%96.html>2024-08-27 隐私政策</a></li>
 
 <li><a href=informal.top/First%20week%20of%20indie%20develop.html>2024-08-25 First week of indie develop</a></li>
 
