--- a/kexizeroing.github.io/Curated link collection.html
+++ b/kexizeroing.github.io/Curated link collection.html
@@ -247,6 +247,7 @@ top: true</p>
 <p>Pi, your personal AI from Inflection: <a href="https://pi.ai">https://pi.ai</a></p>
 <p>Power your apps with real-time speech-to-text APIs: <a href="https://deepgram.com">https://deepgram.com</a></p>
 <p>Run Hugging Face Transformers directly in the browser: <a href="https://github.com/xenova/transformers.js">https://github.com/xenova/transformers.js</a></p>
+<p>A collection of Transformers.js demos: <a href="https://github.com/huggingface/transformers.js-examples">https://github.com/huggingface/transformers.js-examples</a></p>
 <p>A collection of guides and examples for the Gemini API: <a href="https://github.com/google-gemini/cookbook">https://github.com/google-gemini/cookbook</a></p>
 <p>Hands on with the Vercel AI SDK: <a href="https://github.com/nicoalbanese/ai-sdk-fundamentals">https://github.com/nicoalbanese/ai-sdk-fundamentals</a></p>
 <p>AI agent stdlib that works with any LLM and AI SDK: <a href="https://github.com/transitive-bullshit/agentic">https://github.com/transitive-bullshit/agentic</a></p>
@@ -259,6 +260,7 @@ top: true</p>
 <p>Semantic Image Search with Vercel AI SDK: <a href="https://github.com/vercel-labs/semantic-image-search">https://github.com/vercel-labs/semantic-image-search</a></p>
 <p>Anthropic's educational courses: <a href="https://github.com/anthropics/courses">https://github.com/anthropics/courses</a></p>
 <p>Open source Claude Artifacts – built with Llama 3.1: <a href="https://llamacoder.together.ai">https://llamacoder.together.ai</a></p>
+<p>Find the best cursor rules for your framework and language: <a href="https://cursor.directory">https://cursor.directory</a></p>
 <hr/>
 <h2>Machine Learning</h2>
 <p>Gain the skills you need to do independent data science projects: <a href="https://www.kaggle.com/learn">https://www.kaggle.com/learn</a></p>
