--- a/kexizeroing.github.io/Git knowledge that not clear to me.html
+++ b/kexizeroing.github.io/Git knowledge that not clear to me.html
@@ -223,6 +223,15 @@ git rebase -i --autosquash a0b1c2d3~1  # Clean up the history by combining the f
 <li>Use <code>git push origin v1.1.0</code> to push a particular tag, or <code>git push --tags</code> if you want to push all tags.</li>
 <li><code>git push origin :tagname</code> to delete a remote tag, and if you also need to delete the local tag, use <code>git tag --delete tagname</code>.</li>
 </ul>
+<h2>git lfs</h2>
+<p>GitHub limits the size of files allowed in repositories. If you attempt to add or update a file that is larger than 50 MiB, you will receive a warning from Git. GitHub blocks files larger than 100 MiB. To track files beyond this limit, you must use Git Large File Storage (Git LFS). Git LFS handles large files by storing references to the file in the repository, but not the actual file itself.</p>
+<pre><code class="lang-sh">brew install git-lfs
+git lfs install
+
+git lfs track "*.psd"
+
+git lfs help
+</code></pre>
 <h2>update your GitHub fork</h2>
 <p>You cannot push code to repositories that you don’t own. So instead, you make your own copy of the repository by “forking” it. You are then free to make any changes you wish to your repository.</p>
 <p>One of the challenges with forking a repository is keeping your copy up-to-date with the original repository, or the upstream repository. We're going to add the original repository as a git remote, so we can easily fetch and pull from it. Say you want to update your GitHub fork to the new <code>main</code> branch:</p>
