--- a/kexizeroing.github.io/Rendering performance.html
+++ b/kexizeroing.github.io/Rendering performance.html
@@ -160,6 +160,10 @@ window.performance.getEntriesByType('resource')
   console.log('`defer`ed code duration: ' + (timings.domContentLoadedEventStart - timings.domInteractive + 'ms'));
   console.log('`DOMContentLoaded`- wrapped code duration: ' + (timings.domContentLoadedEventEnd - timings.domContentLoadedEventStart + 'ms'));
 });
+
+// PerformanceTiming is deprecated
+// Use the PerformanceNavigationTiming interface instead
+performance.getEntriesByType('navigation')[0]
 </code></pre>
 <h3>Best practices for fonts</h3>
 <ul>
