--- a/kexizeroing.github.io/Start a Javascript stack project.html
+++ b/kexizeroing.github.io/Start a Javascript stack project.html
@@ -73,6 +73,11 @@ export const loader = async ({ params }: LoaderArgs) =&gt; {
 <h3>Writing CSS in 2024</h3>
 <p><strong>CSS Modules</strong> are a small but impactful enhancement on top of vanilla CSS. A CSS Module is a CSS file where all class names and animation names are scoped locally by default. They treat the classes defined in each file as unique. Each class name or identifier is renamed to include a unique hash, and a mapping is exported to JavaScript to allow referencing them. CSS Modules are available in almost every <a href="https://github.com/css-modules/css-modules/blob/master/docs/get-started.md">modern bundler and framework</a>.</p>
 <p><strong>Tailwind</strong> uses a compiler to generate only the classes used. So while the utility CSS framework contains many possible class names, only the classes used will be included in the single, compiled CSS file. Tailwind classes are just utilities for normal CSS that adhere to a design system. You can mix and match Tailwind with CSS Modules.</p>
+<blockquote><ol>
+<li>Tailwind CSS is incredibly performance focused and aims to produce the smallest CSS file possible by only generating the CSS you are actually using in your project.</li>
+<li>The way Tailwind scans your source code for classes is intentionally very simple — we don’t actually parse or execute any of your code in the language it’s written in, we just use regular expressions to extract every string that could possibly be a class name. (Don’t construct class names dynamically)</li>
+</ol>
+</blockquote>
 <p><strong>CSS-in-JS libraries</strong> which require runtime JavaScript are not currently supported in Server Components. Using CSS-in-JS with newer React features like Server Components and Streaming requires library authors to support the latest version of React.</p>
 <p><a href="https://lightningcss.dev">Lightning CSS</a> is an extremely fast CSS parser, transformer, and minifier written in Rust. It lets you use modern CSS features and future syntax today. Features such as CSS nesting, custom media queries, high gamut color spaces, logical properties, and new selector features are automatically converted to more compatible syntax based on your browser targets. Lightning CSS is used by Vite, and soon by Tailwind and Next.js. Tools like <code>postcss</code> and <code>autoprefixer</code> are being replaced by faster, all-in-one Rust toolchains.</p>
 <p>Lightning CSS can be used as a library from JavaScript or Rust, or from a standalone CLI. It can also be wrapped as a plugin in other build tools, and it is built into Parcel out of the box. For example, as a standalone CLI, it can be used to compile, minify, and bundle CSS files: <code>lightningcss --minify --bundle --targets 'defaults' input.css -o output.css</code>.</p>
@@ -249,6 +254,28 @@ clsx(['foo', 0, false, 'bar']);
 
 clsx(['foo'], ['', 0, false, 'bar'], [['baz', [['hello'], 'there']]]);
 //=&gt; 'foo bar baz hello there'
+</code></pre>
+<p>Combining <code>clsx</code> with <code>tailwind-merge</code> allows us to conditionally join Tailwind CSS classes in classNames together without style conflicts.</p>
+<ul>
+<li><code>clsx</code> is generally used to conditionally apply a given className.</li>
+<li><code>tailwind-merge</code> overrides conflicting Tailwind CSS classes and keeps everything else untouched.</li>
+</ul>
+<pre><code class="lang-js">import { clsx } from "clsx"
+import { twMerge } from "tailwind-merge"
+
+export function cn(...inputs) {
+  return twMerge(clsx(inputs))
+}
+
+// twMerge -&gt; condition &amp;&amp; "bg-green-500"
+// clsx -&gt; { "bg-green-500": condition }
+&lt;button className={cn(
+  "bg-blue-500 py-2 px-4",
+  className,
+  {
+    "bg-green-500": condition
+  }
+)}&gt;
 </code></pre>
 <h3>Design system examples</h3>
 <p>A design system is an ever evolving collection of reusable components, guided by rules that ensure consistency and speed, by being the single source of truth for any product development.</p>
