--- a/kexizeroing.github.io/Using ES modules.html
+++ b/kexizeroing.github.io/Using ES modules.html
@@ -12,7 +12,7 @@ tags: [js]</p>
 <blockquote><p>History of module formats:</p>
 <ol>
 <li><strong>AMD (Asynchronous Module Definition):</strong> This is primarily considered a browser-specific module format. Its key feature is asynchronous module loading, with modules wrapped in a <code>define()</code> call. It requires a dedicated loader to run, with RequireJS being the most commonly used one back in the day.</li>
-<li><strong>CJS (CommonJS):</strong> This is the most common module format in the Node.js environment and was originally the only natively supported format in Node.js. It uses <code>module</code> and <code>exports</code>.</li>
+<li><strong>CJS (CommonJS):</strong> This is the most common module format in the Node.js environment and was originally the only natively supported format in Node.js. It uses <code>module</code> and <code>exports</code> fetching modules synchronously.</li>
 <li><strong>UMD (Universal Module Definition):</strong> Since AMD and CJS are incompatible with each other, but developers wanted a single codebase to work in both browser and Node.js, UMD was created. UMD wraps the module in an IIFE and includes logic to check for <code>define</code>, <code>module</code>, and other variables for compatibility.</li>
 </ol>
 </blockquote>
