--- a/kexizeroing.github.io/A guide to Prompt Engineering.html
+++ b/kexizeroing.github.io/A guide to Prompt Engineering.html
@@ -271,6 +271,8 @@ response = client.beta.prompt_caching.messages.create(
 </code></pre>
 <p>When you make an API call with these additions, we check if the designated parts of your prompt are already cached from a recent query. If so, we use the cached prompt, speeding up processing time and reducing costs.</p>
 <p>Place static content (system instructions, context, tool definitions) at the beginning of your prompt. Mark the end of the reusable content for caching using the <code>cache_control</code> parameter. The cache has a 5-minute lifetime, refreshed each time the cached content is used.</p>
+<blockquote><p>Anthropic published the system prompts for their user-facing chat-based LLM systems - Claude 3 Haiku, Claude 3 Opus and Claude 3.5 Sonnet - as part of their documentation: <a href="https://docs.anthropic.com/en/release-notes/system-prompts">https://docs.anthropic.com/en/release-notes/system-prompts</a></p>
+</blockquote>
 <h2>Chrome built-in AI</h2>
 <p>With built-in AI, your website or web application can perform AI-powered tasks without needing to deploy or manage its own AI models.</p>
 <p>You'll access built-in AI capabilities primarily with task APIs, such as a translation API or a summarization API. Task APIs are designed to run inference against the best model for the assignment. In Chrome, these APIs are built to run inference against Gemini Nano with fine-tuning or an expert model.</p>
