--- a/informal.top/雅思备考 2024Q3.html
+++ b/informal.top/雅思备考 2024Q3.html
@@ -301,7 +301,7 @@
 <td>7.5</td>
 <td>6.5</td>
 <td>6.0</td>
-<td>5.5</td>
+<td>5.5(复议6.0)</td>
 <td>6.5</td>
 </tr>
 <tr>
@@ -362,4 +362,9 @@
 </ul>
 </li>
 <li>再提升难度比较大了，不管结果怎么样，都转战多邻国了</li>
+</ul>
+<p>8.30</p>
+<ul>
+<li>收到复议结果，口语 5.5-&gt;6.0</li>
+<li>努力之后有回报的感觉，太爽了</li>
 </ul>
