--- a/kexizeroing.github.io/Curated link collection.html
+++ b/kexizeroing.github.io/Curated link collection.html
@@ -120,6 +120,7 @@ top: true</p>
 <p>Compare web animation techniques by bouncing a ball: <a href="https://sparkbox.github.io/bouncy-ball">https://sparkbox.github.io/bouncy-ball</a></p>
 <p>A Friendly Introduction to Spring Physics: <a href="https://www.joshwcomeau.com/animation/a-friendly-introduction-to-spring-physics">https://www.joshwcomeau.com/animation/a-friendly-introduction-to-spring-physics</a></p>
 <p>The Collection of CSS-only Shapes: <a href="https://css-shape.com">https://css-shape.com</a></p>
+<p>Styling Tables the Modern CSS Way: <a href="https://piccalil.li/blog/styling-tables-the-modern-css-way">https://piccalil.li/blog/styling-tables-the-modern-css-way</a></p>
 <hr/>
 <h2>FE dev resources</h2>
 <p>GUI Challenges: <a href="https://www.youtube.com/playlist?list=PLNYkxOF6rcIAaV1wwI9540OC_3XoIzMjQ">https://www.youtube.com/playlist?list=PLNYkxOF6rcIAaV1wwI9540OC_3XoIzMjQ</a></p>
