--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 51 个博客、8870 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 51 个博客、8872 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=sund.site/Windows%20Efficient%20Setup.html>2024-08-31 Windows Efficient Setup</a></li>
+
+<li><a href=yuanj.top/%E6%8B%9F%E5%8D%97%E8%8A%A5%E6%A0%B9%E9%83%A8%E7%9A%84%E5%8D%95%E7%BB%86%E8%83%9E%E5%88%86%E8%BE%A8%E7%8E%87%E8%B0%83%E6%8E%A7%E6%99%AF%E8%A7%82.html>2024-08-30 拟南芥根部的单细胞分辨率调控景观</a></li>
 
 <li><a href=babyno.top/%E9%9A%90%E7%A7%81%E6%94%BF%E7%AD%96.html>2024-08-27 隐私政策</a></li>
 
