--- a/kexizeroing.github.io/Algorithm basics and sample problems.html
+++ b/kexizeroing.github.io/Algorithm basics and sample problems.html
@@ -7,7 +7,7 @@ description: ""
 added: ""
 top: true
 order: 4</p>
-<h2>updatedDate: "Aug 16 2024"</h2>
+<h2>updatedDate: "Aug 30 2024"</h2>
 <h3>TOC</h3>
 <ul>
 <li><a href="#toc">TOC</a></li>
@@ -163,6 +163,28 @@ function mergeSort(arr) {
   const right = arr.slice(split, arr.length);
 
   return merge(mergeSort(left), mergeSort(right));
+}
+</code></pre>
+<p>Count the number of reverse pairs in an array using the merge sort algorithm. A reverse pair is a pair of numbers (i, j) where <code>i &lt; j</code> and <code>nums[i] &gt; nums[j]</code>.</p>
+<pre><code class="lang-js">function merge(arr1, arr2, count = 0) {
+  const merged = [];
+  let i = 0;
+  let j = 0;
+
+  while (i &lt; arr1.length &amp;&amp; j &lt; arr2.length) {
+    if (arr1[i] &lt;= arr2[j]) {
+      merged.push(arr1[i]);
+      i++;
+    } else {
+      merged.push(arr2[j]);
+      j++;
+      // Count reverse pairs
+      count += arr1.length - i;
+    }
+  }
+
+  merged.push(...arr1.slice(i), ...arr2.slice(j));
+  return merged;
 }
 </code></pre>
 <h3>Linked List</h3>
@@ -990,6 +1012,28 @@ function isSame(dict1, dict2) {
   return true;
 }
 </code></pre>
+<p>You are given an array of integers nums, there is a sliding window of size k which is moving from the very left of the array to the very right. Each time the sliding window moves right by one position. Return an array of max number in sliding window.</p>
+<pre><code class="lang-js">var maxSlidingWindow = function(nums, k) {
+  let q = [];  // stores *indices*
+  let res = [];
+
+  for (let i = 0; i &lt; nums.length; i++) {
+    while (nums[i] &gt;= nums[q[q.length - 1]]) {
+      q.pop();
+    }
+    q.push(i);
+
+    // remove first element if it's outside the window
+    if (q[0] === i - k) {
+      q.shift();
+    }
+    if (i &gt;= k - 1) {
+      res.push(nums[q[0]]);
+    }
+  }
+  return res;
+};
+</code></pre>
 <p>Given a string s, return the longest palindromic substring in s.</p>
 <pre><code class="lang-js">var longestPalindrome = function(s) {
   let left = 0, right = 0, maxLength = 0;
@@ -1055,6 +1099,29 @@ function isSame(dict1, dict2) {
       }
     }
   }
+};
+</code></pre>
+<p>Given a string s containing only three types of characters: '(', ')' and '*', return true if s is valid. '*' could be treated as a single right parenthesis ')' or a single left parenthesis '(' or an empty string "".</p>
+<pre><code class="lang-js">var checkValidString = function(s) {
+  // the min and max # of open parentheses that must be matched
+  let leftMin = 0, leftMax = 0;
+
+  for (let c of s) {
+    if (c === '(') {
+      leftMin++;
+      leftMax++;
+    } else if (c === ')') {
+      leftMin--;
+      leftMax--;
+    } else {
+      leftMin--;
+      leftMax++;
+    }
+    if (leftMax &lt; 0) return false;
+    if (leftMin &lt; 0) leftMin = 0; // '*' can be treated as empty string
+  }
+
+  return leftMin === 0; 
 };
 </code></pre>
 <p>Write a function to find the longest common prefix string amongst an array of strings. If there is no common prefix, return an empty string "".</p>
@@ -1755,6 +1822,62 @@ function dfs(grid, i, j, rows, cols) {
     }
   }
   return ans;
+};
+</code></pre>
+<p>Given two words, <code>beginWord</code> and <code>endWord</code>, and a dictionary <code>wordList</code>, return the number of words in the shortest transformation sequence from <code>beginWord</code> to <code>endWord</code>, or 0 if no such sequence exists. Every adjacent pair of words differs by a single letter.</p>
+<pre><code class="lang-js">var ladderLength = function(beginWord, endWord, wordList) {
+  let wordSet = new Set(wordList)
+  let queue = [beginWord];
+  let steps = 1;
+
+  // bfs
+  while (queue.length) {
+    // words in the same "level"
+    let n = queue.length;
+    for (let i = 0; i &lt; n; i++) {
+      let word = queue.shift();
+      if (word === endWord) {
+        return steps;
+      }
+
+      for (let j = 0; j &lt; word.length; j++) {
+        // replace the char with letters from [a - z]
+        for (let k = 0; k &lt; 26; k++) {
+          let newWord = word.slice(0, j) + String.fromCharCode(k + 97) + word.slice(j + 1);
+          if (wordSet.has(newWord)) {
+            queue.push(newWord);
+            wordSet.delete(newWord);
+          }
+        }
+      }
+    }
+
+    steps++;
+  }
+
+  return 0;    
+};
+</code></pre>
+<p>The message is decoded via the following mapping: <code>"1" -&gt; 'A'</code> ... <code>"26" -&gt; 'Z'</code>. There are many different ways you can decode the message because some codes are contained in other codes ("2" and "5" vs "25"). Given a string s containing only digits, return the number of ways to decode it.</p>
+<pre><code class="lang-js">var numDecodings = function (s) {
+  let dp = Array(s.length + 1).fill(0);
+  // there is only one way to decode an empty string
+  dp[0] = 1;
+  if (s[0] !== '0') {
+    dp[1] = 1;
+  } else {
+    return 0;
+  }
+
+  for (let i = 2; i &lt;= s.length; i++) {
+    if (s[i - 1] !== '0') {
+      dp[i] += dp[i - 1];
+    }
+    if (s[i - 2] === '1' || (s[i - 2] === '2' &amp;&amp; s[i - 1] &lt;= '6')) {
+      dp[i] += dp[i - 2];
+    }
+  }
+  return dp[s.length];
 };
 </code></pre>
 <p>Given an integer array nums, return the length of the longest strictly increasing subsequence. For example, <code>[10,9,2,5,3,7,101,18]</code>'s longest increasing subsequence is <code>[2,3,7,101]</code>.</p>
