--- a/kexizeroing.github.io/Learn the new frontend build tool Vite.html
+++ b/kexizeroing.github.io/Learn the new frontend build tool Vite.html
@@ -45,6 +45,10 @@ tags: [web]</p>
 <li>DefinePlugin -&gt; define()</li>
 </ul>
 </blockquote>
+<h3>Issues with Vite</h3>
+<p><a href="https://github.com/vitejs/vite/discussions/13697#discussioncomment-10241433">https://github.com/vitejs/vite/discussions/13697#discussioncomment-10241433</a></p>
+<p>When I use Vite on a real world large web app, we encounter a poor experience: page reloading is extremely slow, and using the network panel in Devtool may result in freezing for several minutes.</p>
+<p>Vite's current unbundle mechanism is not suitable for large web app development, as it reloads a large number of code files and generates numerous requests on every page refresh. While Vite has Dependency Pre-Bundling to solve third-party dependency issues, for large web app, our own codebase is also substantial. When a page has 500 source files simultaneously, the development experience becomes terrible.</p>
 <h2>Features</h2>
 <h3>NPM Dependency Resolving</h3>
 <ul>
