--- a/index.html
+++ b/index.html
@@ -6,18 +6,30 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 51 个博客、8872 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 51 个博客、8878 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
 
+<li><a href=yuanj.top/Bionanoaccess%20%E5%AE%89%E8%A3%85.html>2024-09-02 Bionanoaccess 安装</a></li>
+
+<li><a href=mabbs.github.io/Python%E5%9B%BD%E5%AF%86%E7%AE%97%E6%B3%95%E4%BD%BF%E7%94%A8%E6%8E%A2%E7%B4%A2.html>2024-09-02 Python国密算法使用探索</a></li>
+
+<li><a href=qingbob.com/%E6%96%B0%20AI%EF%BC%8C%E6%97%A7%E7%A7%A9%E5%BA%8F.html>2024-09-02 新 AI，旧秩序</a></li>
+
+<li><a href=informal.top/second%20product.html>2024-09-01 second product</a></li>
+
 <li><a href=sund.site/Windows%20Efficient%20Setup.html>2024-08-31 Windows Efficient Setup</a></li>
+
+<li><a href=www.zhaohuabing.com/%E8%B6%85%E8%B6%8A%20Gateway%20API%EF%BC%9A%E6%B7%B1%E5%85%A5%E6%8E%A2%E7%B4%A2%20Envoy%20Gateway%20%E7%9A%84%E6%89%A9%E5%B1%95%E5%8A%9F%E8%83%BD%EF%BC%88%E6%9C%AA%E5%AE%8C%E6%88%90%EF%BC%89.html>2024-08-31 超越 Gateway API：深入探索 Envoy Gateway 的扩展功能（未完成）</a></li>
 
 <li><a href=yuanj.top/%E6%8B%9F%E5%8D%97%E8%8A%A5%E6%A0%B9%E9%83%A8%E7%9A%84%E5%8D%95%E7%BB%86%E8%83%9E%E5%88%86%E8%BE%A8%E7%8E%87%E8%B0%83%E6%8E%A7%E6%99%AF%E8%A7%82.html>2024-08-30 拟南芥根部的单细胞分辨率调控景观</a></li>
 
-<li><a href=babyno.top/%E9%9A%90%E7%A7%81%E6%94%BF%E7%AD%96.html>2024-08-27 隐私政策</a></li>
+<li><a href=babyno.top/Markdown%E6%8E%92%E7%89%88%E7%BE%8E%E5%8C%96%E5%B7%A5%E5%85%B7%EF%BC%9A%E6%96%87%E9%A2%9C.html>2024-08-30 Markdown排版美化工具：文颜</a></li>
+
+<li><a href=iphyer.github.io/The%20Power%20of%20Precision%3A%20Revolutionize%20Your%20Writing%20in%20Three%20Steps.html>2024-08-30 The Power of Precision: Revolutionize Your Writing in Three Steps</a></li>
 
 <li><a href=informal.top/First%20week%20of%20indie%20develop.html>2024-08-25 First week of indie develop</a></li>
 
