--- a/kexizeroing.github.io/A guide to Prompt Engineering.html
+++ b/kexizeroing.github.io/A guide to Prompt Engineering.html
@@ -6,7 +6,7 @@ slug: a-guide-to-prompt-engineering
 description: ""
 added: "Apr 5 2023"
 tags: [AI]</p>
-<h2>updatedDate: "Aug 10 2024"</h2>
+<h2>updatedDate: "Aug 31 2024"</h2>
 <p>Prompt Engineering refers to methods for how to communicate with LLM to steer its behavior for desired outcomes without updating the model weights. Researchers use prompt engineering to improve the capacity of LLMs on a wide range of common and complex tasks such as question answering and arithmetic reasoning. This guide provides a rough idea of how to use prompts to interact and instruct LLMs.</p>
 <p><strong>Temperature</strong> - In short, the lower the <code>temperature</code> the more deterministic the results. Increasing temperature could lead to more randomness encouraging more diverse or creative outputs. We are essentially increasing the weights of the other possible tokens. In terms of application, we might want to use a lower temperature value for tasks like fact-based QA to encourage more factual and concise responses. For poem generation or other creative tasks, it might be beneficial to increase the temperature value.</p>
 <p><strong>Top_p</strong> - Computes the cumulative probability distribution, and cut off as soon as that distribution exceeds the value of <code>top_p</code>. For example, a <code>top_p</code> of 0.3 means that only the tokens comprising the top 30% probability mass are considered. If you are looking for exact and factual answers keep this low. If you are looking for more diverse responses, increase to a higher value.</p>
@@ -215,6 +215,12 @@ She was born with a silver spoon in her mouth.
 </code></pre>
 </li>
 </ul>
+<h3>Avoiding Hallucinations</h3>
+<p>A way to reduce hallucinations on long documents is to make Claude gather evidence first. In this case, we tell Claude to first extract relevant quotes, then base its answer on those quotes.</p>
+<pre><code>&lt;question&gt;What was Matterport's subscriber base on the precise date of May 31, 2020?&lt;/question&gt;
+
+Please read the below document. Then, in &lt;scratchpad&gt; tags, pull the most relevant quote from the document and consider whether it answers the user's question or whether it lacks sufficient detail. Then write a brief numerical answer in &lt;answer&gt; tags.
+</code></pre>
 <h3>Prompt Debiasing</h3>
 <p>Depending on their distribution and order within the prompt, exemplars may bias LLM outputs.</p>
 <p>When discussing the distribution of exemplars within a prompt, we are referring to how many exemplars from different classes are present. For example, if you are performing binary sentiment analysis (positive or negative) on tweets, and you provide 3 positive tweets and 1 negative tweet as exemplars, then you have a distribution of 3:1. Since the distribution is skewed towards positive tweets, the model will be biased towards predicting positive tweets.</p>
