--- a/kexizeroing.github.io/CSS effects collection.html
+++ b/kexizeroing.github.io/CSS effects collection.html
@@ -6,7 +6,7 @@ slug: css-effects-collection
 description: ""
 added: "Dec 5 2022"
 tags: [css]</p>
-<h2>updatedDate: "July 27 2024"</h2>
+<h2>updatedDate: "Aug 31 2024"</h2>
 <blockquote><ul>
 <li><a href="https://css-tip.com">https://css-tip.com</a> has a wide collection of CSS tips and tricks, which is a good place to keep up to date with the new CSS features.</li>
 <li><a href="https://anthonyhobday.com/sideprojects/saferules/">https://anthonyhobday.com/sideprojects/saferules/</a> includes some visual design rules you can safely follow every time.</li>
@@ -25,6 +25,7 @@ tags: [css]</p>
 <li><a href="#filter-and-backdrop-filter">Filter and backdrop filter</a></li>
 <li><a href="#scroll-driven-animations">Scroll-driven animations</a></li>
 <li><a href="#reveal-hover-effect">Reveal hover effect</a></li>
+<li><a href="#rotating-highlight-effect">Rotating highlight effect</a></li>
 </ul>
 <h3>Rainbow Artword</h3>
 <p>&lt;img alt="Rainbow Artword" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/008vxvgGly1h8t01qct5yj308q05ct8r.jpg" width="150"&gt;</p>
@@ -485,3 +486,62 @@ img:hover {
 <li><code>object-position</code> is used together with <code>object-fit</code> to specify how an <code>&lt;img&gt;</code> should be positioned with x/y coordinates inside its "own content box".</li>
 <li><code>box-sizing: border-box</code> will make the size of the content box equal to 0. In other words, we don’t see the image, but we see the background color since it covers the padding area.</li>
 </ul>
+<h3>Rotating highlight effect</h3>
+<p>It creates an animated button with a rotating highlight effect around its border. Conic gradients are employed to generate the rotating highlight and the <code>@property</code> rule defines a custom property for rotation.</p>
+<p><a href="https://codepen.io/wesbos/pen/PoraMVV">https://codepen.io/wesbos/pen/PoraMVV</a></p>
+<pre><code class="lang-html">&lt;button&gt;
+  &lt;div class="fancy"&gt;&lt;/div&gt;
+  &lt;span class="text"&gt;Download For Free&lt;/span&gt;
+&lt;/button&gt;
+
+&lt;style&gt;
+  @property --rotate {
+    syntax: "&lt;angle&gt;";
+    initial-value: 0deg;
+    inherits: false;
+  }
+
+  button {
+    --blue: #0173ff;
+    --radius: 50px;
+    --rotate: 0deg;
+    border-radius: var(--radius);
+    background: var(--blue);
+    color: white;
+    border: 0;
+    position: relative;
+
+    .fancy {
+      position: absolute;
+      inset: 0;
+      &amp;:before {
+        content: "";
+        background: conic-gradient(
+          from var(--rotate),
+          transparent 0%,
+          white 5%,
+          transparent 10%
+        );
+        position: absolute;
+        inset: 0;
+        animation: rotate 1s linear infinite;
+      }
+      &amp;:after {
+        content: "";
+        background: var(--blue);
+        position: absolute;
+        inset: 2px;
+        border-radius: calc(var(--radius) - 2px);
+      }
+    }
+    .text {
+      position: relative;
+    }
+  }
+  @keyframes rotate {
+    to {
+      --rotate: 360deg;
+    }
+  }
+&lt;/style&gt;
+</code></pre>
