--- a/kexizeroing.github.io/JavaScript String, Array and Object.html
+++ b/kexizeroing.github.io/JavaScript String, Array and Object.html
@@ -563,6 +563,22 @@ obj.quaxxor = "the friendly duck";  // silently doesn't add the property
 // Attempted changes through Object.defineProperty, throw a TypeError in strict mode.
 Object.defineProperty(obj, "foo", { value: "eit" });
 </code></pre>
+<pre><code class="lang-js">// protect against prototype pollution
+[
+  Object,
+  Object.prototype,
+  Function,
+  Function.prototype,
+  Array,
+  Array.prototype,
+  String,
+  String.prototype,
+  Number,
+  Number.prototype,
+  Boolean,
+  Boolean.prototype,
+].forEach(Object.freeze);
+</code></pre>
 <h3>Object.is()</h3>
 <p>It determines whether two values are the same value. The only difference between <code>Object.is()</code> and <code>===</code> is in their treatment of signed zeros and NaN values.</p>
 <pre><code class="lang-js">Object.is('foo', 'foo');  // true
