--- a/kexizeroing.github.io/Notes on work projects (in Chinese).html
+++ b/kexizeroing.github.io/Notes on work projects (in Chinese).html
@@ -67,9 +67,8 @@ new Vue({
 <ul>
 <li>Webpack 5 boilerplate: <a href="https://github.com/taniarascia/webpack-boilerplate">https://github.com/taniarascia/webpack-boilerplate</a></li>
 <li>Create App: <a href="https://createapp.dev/webpack">https://createapp.dev/webpack</a></li>
-<li>Professional front-end template: <a href="https://github.com/h5bp/html5-boilerplate">https://github.com/h5bp/html5-boilerplate</a></li>
-<li>A case study of CSR with Webpack setup: <a href="https://github.com/theninthsky/client-side-rendering">https://github.com/theninthsky/client-side-rendering</a></li>
 <li>Webpack articles: <a href="https://blog.jakoblind.no/tags/webpack">https://blog.jakoblind.no/tags/webpack</a></li>
+<li>Geektime webpack course: <a href="https://github.com/cpselvis/geektime-webpack-course">https://github.com/cpselvis/geektime-webpack-course</a></li>
 </ul>
 <h4>filename and chunkFilename</h4>
 <ul>
@@ -440,6 +439,11 @@ if (!isInIframe &amp;&amp; !ua.toLowerCase().match(/micromessenger|android|iphon
 <li>添加加速域名后，需要在 DNS 解析服务商处，添加一条 CNAME 记录，将加速域名唯一解析到 CNAME 域名，记录生效后该域名所有的请求都将转向 CDN 节点，达到加速效果。CNAME 域名将会解析到具体哪个节点 IP 地址，将由 CDN 的调度系统综合多个条件来决定。</li>
 </ol>
 </blockquote>
+<h3>秒杀系统设计</h3>
+<ul>
+<li><a href="https://github.com/resumejob/How-to-design-a-spike-system">https://github.com/resumejob/How-to-design-a-spike-system</a></li>
+<li><a href="https://github.com/sunshineshu/-How-to-design-a-spike-system/blob/master/SUMMARY.md">https://github.com/sunshineshu/-How-to-design-a-spike-system/blob/master/SUMMARY.md</a></li>
+</ul>
 <h3>开发自己的调试工具</h3>
 <ul>
 <li><a href="https://kentcdodds.com/blog/make-your-own-dev-tools">https://kentcdodds.com/blog/make-your-own-dev-tools</a></li>
