--- a/yuanj.top/README.html
+++ b/yuanj.top/README.html
@@ -2,16 +2,27 @@
 <hr/>
 <h2>title: README</h2>
 <h2>Yoo, I'm Jiao Yuan 👋</h2>
+<pre><code class="lang-bash">#!/bin/bash
+author=(
+    "Name: Jiao Yuan"
+    "Create Date: 2003"
+    "Tags: Lifelong Learner,Independent Blogger,Sports Enthusiast,INTJ"
+    "Address: Chengdu"
+    "Email: yuanj.top@gmail.com"
+    "Blog: https://yuanj.top"
+    "Description: I examine myself three times every day"
+)
+for line in "${author[@]}"; do
+    echo "$line"
+done
+</code></pre>
 <ul>
 <li>🏫 <a href="https://www.cdut.edu.cn/">CDUT</a> - BSc in Environmental Science and Engineering, 6/2021 - 7/2025 .</li>
 <li>👨‍🎓 Member of <em><a href="https://www.x-mol.com/groups/hj-lab">HJLab</a></em>, 12/2022 - 06/2024 .</li>
-<li>🧭 I examine myself three times every day .</li>
 <li>🧬 Shell / Python / R / Bioinformatics / NGS-analysis / Linux player .</li>
 <li>💻 Arch and GNU Cultist, first thing in the morning is 'yay -Syyu' .</li>
 <li>📗 Blogger of the WeChat official account  <a href="https://yuanj.top/images/wechat.jpg">猫四叔</a> .</li>
 <li>🎮 Player for <a href="https://en.wikipedia.org/wiki/RSS">RSS</a> / <a href="https://zh.wikipedia.org/wiki/%E7%AF%AE%E7%90%83">Basketball</a> / <a href="https://www.isotope244.com/machines-at-war-3.html">Machines at War 3</a> / <a href="https://val.qq.com/main.html">VALORANT</a> / <a href="https://www.minecraft.net/zh-hans">Minecraft</a> .</li>
-<li>🕝 What I'm <a href="https://github.com/yuanj82/RSS">reading</a>? What I'm <a href="https://yuanj.top/">writing</a>? What I'm <a href="https://scholar.google.com/citations?view_op=list_works&amp;hl=zh-CN&amp;hl=zh-CN&amp;user=VHD-XpkAAAAJ">researching</a>?</li>
-<li>📫 Welcome to <a href="https://yuanj.top/">yuanj.top</a> or Email me at: <a href="https://yuanj.top/images/email.png">yuanj.top@gmail.com</a> .</li>
 </ul>
 <h2>你可以在这里留言</h2>
 <p>&lt;!-- &lt;script src="https://utteranc.es/client.js"
