--- a/kexizeroing.github.io/Algorithm basics and sample problems.html
+++ b/kexizeroing.github.io/Algorithm basics and sample problems.html
@@ -7,7 +7,7 @@ description: ""
 added: ""
 top: true
 order: 4</p>
-<h2>updatedDate: "Aug 30 2024"</h2>
+<h2>updatedDate: "Sep 2 2024"</h2>
 <h3>TOC</h3>
 <ul>
 <li><a href="#toc">TOC</a></li>
@@ -252,6 +252,46 @@ function reverseList(head) {
   }
 
   return prev;
+}
+
+// Reverse nodes in k-Group
+// [1,2,3,4,5], k = 2 -&gt; [2,1,4,3,5]
+// [1,2,3,4,5], k = 3 -&gt; [3,2,1,4,5]
+function reverseKGroup(head, k) {
+  if (k === 1) return head;
+
+  let dummy = new ListNode(0);
+  dummy.next = head;
+  let prevGroupTail = dummy;
+
+  while (head) {
+    let groupStart = head;
+    let groupEnd = getGroupEnd(head, k);
+
+    // If we don't have k nodes left
+    if (!groupEnd) break;
+
+    let nextGroupStart = groupEnd.next;
+    reverseList(groupStart, nextGroupStart);
+
+    // Connect the reversed group
+    prevGroupTail.next = groupEnd;
+    groupStart.next = nextGroupStart;
+
+    prevGroupTail = groupStart;
+    head = nextGroupStart;
+  }
+
+  return dummy.next;
+};
+
+// helper function to get the end of the group
+function getGroupEnd(head, k) {
+  while (head &amp;&amp; k &gt; 1) {
+    head = head.next;
+    k--;
+  }
+  return head;
 }
 
 // fast pointer moves forward `n` steps first,
@@ -1034,6 +1074,79 @@ function isSame(dict1, dict2) {
   return res;
 };
 </code></pre>
+<p>Given two strings s1 and s2, return true if s2 contains a permutation of s1 (one of s1's permutations is the substring of s2).</p>
+<pre><code class="lang-js">var checkInclusion = function(s1, s2) {
+  let len1 = s1.length;
+  let len2 = s2.length;
+  if (len1 &gt; len2) return false;
+  let count = Array(26).fill(0);
+
+  for (let i = 0; i &lt; len1; i++) {
+    // 97 -&gt; 'a'.charCodeAt(0)
+    count[s1.charCodeAt(i) - 97]++;
+    count[s2.charCodeAt(i) - 97]--;
+  }
+  if (count.every(i =&gt; i === 0)) {
+    return true;
+  }
+
+  for (let i = len1; i &lt; len2; i++) {
+    count[s2.charCodeAt(i) - 97]--;
+    // the character leaving the window, always maintaining a window of size `len1`
+    count[s2.charCodeAt(i-len1) - 97]++;
+    if (count.every(e =&gt; e === 0)) {
+      return true;
+    }
+  }
+  return false;
+};
+</code></pre>
+<p>You are given a string s and an integer k. You can choose any character of the string and change it to any other character. You can perform this operation at most k times. Return the length of the longest substring containing the same letter you can get after performing the above operations.</p>
+<pre><code class="lang-js">var characterReplacement = function(s, k) {
+  let left = 0;
+  let maxCharCount = 0;
+  let visited = {};
+
+  for (let right = 0; right &lt; s.length; right++) {
+    let char = s[right];
+    visited[char] = (visited[char] || 0) + 1;
+
+    maxCharCount = Math.max(maxCharCount, visited[char]);
+
+    // right - left + 1: current window size
+    // # of char in the window that are different from the most frequent character
+    if (right - left + 1 - maxCharCount &gt; k) {
+      visited[s[left]]--;
+      left++;
+      // moving left does not make our current window shorter
+    }
+  }
+
+  return s.length - left;
+};
+</code></pre>
+<p>You are given a string s. We want to partition the string into as many parts as possible so that each letter appears in at most one part. Return a list of the size of these parts.</p>
+<pre><code class="lang-js">var partitionLabels = function(s) {
+  let last = Array(26).fill(-1);
+  let partitions = [];
+  let left = 0;
+  let end = 0;
+
+  // lastIndexOf
+  for (let i = 0; i &lt; s.length; i++) {
+    last[s.charCodeAt(i) - 'a'.charCodeAt(0)] = i;
+  }
+
+  for (let i = 0; i &lt; s.length; i++) {
+    end = Math.max(end, last[s.charCodeAt(i) - 'a'.charCodeAt(0)]);
+    if (i === end) {
+      partitions.push(i - left + 1);
+      left = i + 1;
+    }
+  }
+  return partitions;
+};
+</code></pre>
 <p>Given a string s, return the longest palindromic substring in s.</p>
 <pre><code class="lang-js">var longestPalindrome = function(s) {
   let left = 0, right = 0, maxLength = 0;
@@ -1137,6 +1250,41 @@ function isSame(dict1, dict2) {
   return strs[0];
 };
 </code></pre>
+<p>Given an unsorted integer array nums. Return the smallest positive integer that is not present in nums.</p>
+<pre><code class="lang-js">var firstMissingPositive = function(nums) {
+  const numSet = new Set(nums.filter(num =&gt; num &gt; 0)); 
+  let i = 1;
+
+  while (numSet.has(i)) {
+    i++;
+  }
+  return i;
+};
+
+// use O(1) space
+var firstMissingPositive = function(nums) {
+  const swap = (arr, i, j) =&gt; {
+    [arr[i], arr[j]] = [arr[j], arr[i]];
+  };
+  const n = nums.length;
+
+  // The answer lies within the range [1, n+1]
+  // Place each positive integer i at index i-1 if possible
+  for (let i = 0; i &lt; n; i++) {
+    while (nums[i] &gt; 0 &amp;&amp; nums[i] &lt;= n &amp;&amp; nums[i] !== nums[nums[i] - 1]) {
+      swap(nums, i, nums[i] - 1);
+    }
+  }
+
+  for (let i = 0; i &lt; n; i++) {
+    if (nums[i] !== i + 1) {
+      return i + 1;
+    }
+  }
+  // If all positive integers from 1 to n are present, return n + 1
+  return n + 1;
+};
+</code></pre>
 <p>Given an unsorted array of integers nums, return the length of the longest consecutive elements sequence. Take <code>[10, 4, 20, 1, 3, 2]</code> as an example, the longest consecutive elements sequence is <code>[1, 2, 3, 4]</code>.</p>
 <pre><code class="lang-js">var longestConsecutive = function(nums) {
   let numSet = new Set(nums);
@@ -1216,6 +1364,45 @@ function isSame(dict1, dict2) {
   }
 
   return nums1;
+};
+</code></pre>
+<p>Given string num representing a non-negative integer num, and an integer k, return the smallest possible integer after removing k digits from num.</p>
+<pre><code class="lang-js">var removeKdigits = function(num, k) {
+  let stack = [];
+  for (let c of num) {
+    while (stack.length &amp;&amp; k &gt; 0 &amp;&amp; c &lt; stack[stack.length-1]) {
+      stack.pop();
+      k--;
+    }
+    stack.push(c);
+  }
+
+  while (stack.length &amp;&amp; k &gt; 0) {
+    stack.pop();
+    k--;
+  }
+  // remove all the leading zeros
+  while (stack.length &amp;&amp; stack[0] === '0') {
+    stack.shift();
+  }
+
+  return stack.join('') || "0";  
+};
+</code></pre>
+<p>Given an array of integers nums, calculate the pivot index of this array. The pivot index is the index where the sum of all the numbers strictly to the left of the index is equal to the sum of all the numbers strictly to the index's right.</p>
+<pre><code class="lang-js">var pivotIndex = function(nums) {
+  let total = nums.reduce((a, b) =&gt; a + b, 0);
+  let leftTotal = 0;
+
+  for (let i = 0; i &lt; nums.length; i++) {
+    let rightTotal = total - leftTotal - nums[i];
+    if (rightTotal === leftTotal) {
+      return i;
+    }
+
+    leftTotal += nums[i];
+  }
+  return -1;    
 };
 </code></pre>
 <p>Given an array of integers and an integer <code>k</code>, you need to find the total number of continuous subarrays whose sum equals to <code>k</code>. For example, Input: nums = <code>[1,1,1]</code>, k = 2; Output: 2</p>
@@ -1468,6 +1655,39 @@ var subarraySum = function(nums, k) {
   return binarySearch(matrix[mid], target);
 };
 </code></pre>
+<p>Given an array of integers nums sorted in non-decreasing order, find the starting and ending position of a given target value. If target is not found in the array, return [-1, -1].</p>
+<pre><code class="lang-js">var searchRange = function(nums, target) {
+  const binarySearch = (nums, target, isSearchingLeft) =&gt; {
+    let left = 0;
+    let right = nums.length - 1;
+    // index of either the leftmost or rightmost occurrence of the target
+    let idx = -1;
+
+    while (left &lt;= right) {
+      let mid = Math.floor((left + right) / 2);
+
+      if (nums[mid] &gt; target) {
+        right = mid - 1;
+      } else if (nums[mid] &lt; target) {
+        left = mid + 1;
+      } else {
+        idx = mid;
+        if (isSearchingLeft) {
+          right = mid - 1;
+        } else {
+          left = mid + 1;
+        }
+      }
+    }
+    return idx;
+  };
+
+  let left = binarySearch(nums, target, true);
+  let right = binarySearch(nums, target, false);
+
+  return [left, right];    
+};
+</code></pre>
 <p>a) Find the integer square root; b) Check if a number is the perfect square number.</p>
 <pre><code class="lang-js">function getSquareRoot(num) {
   let i = 0;
@@ -1521,6 +1741,27 @@ function checkPerfectSquare(num) {
   }
   return intervals.filter(q =&gt; q); // fiter to pass undefined value
 };
+</code></pre>
+<p>Given an array of meeting time intervals consisting of start and end times, find the minimum number of conference rooms required. For example, Given <code>[[0, 30],[5, 10],[15, 20]]</code>, return 2.</p>
+<pre><code class="lang-js">var minMeetingRooms = function(intervals) {
+  if (intervals.length === 0) return 0;
+  intervals.sort((a, b) =&gt; a[0] - b[0]);
+
+  let rooms = [intervals[0][1]];
+
+  for (let i = 1; i &lt; intervals.length; i++) {
+    // check if it can reuse the existing room
+    if (intervals[i][0] &gt;= rooms[0]) {
+      rooms[0] = intervals[i][1];
+    } else {
+      rooms.push(intervals[i][1]);
+    }
+
+    // mock PriorityQueue to find the earliest ending time
+    rooms.sort((a, b) =&gt; a - b);
+  }
+  return rooms.length;
+}
 </code></pre>
 <p>Given n non-negative integers representing an elevation map where the width of each bar is 1, compute how much water it can trap after raining.</p>
 <pre><code class="lang-js">var trap = function(height) {
@@ -1609,45 +1850,29 @@ function checkPerfectSquare(num) {
   return result;
 };
 </code></pre>
-<p>Given a string s, partition s such that every substring of the partition is a palindrome. Return all possible palindrome partitioning of s. Input: <code>s = "aab"</code>. Output: <code>[["a","a","b"],["aa","b"]]</code></p>
-<pre><code class="lang-js">var partition = function(s) {
-  const res = [];
-  const part = [];
+<p>Given a string containing digits from 2-9 inclusive, return all possible letter combinations that the number could represent. A mapping of digits to letters (just like on the telephone buttons) is <code>2-&gt;abc</code> ... <code>9-&gt;wxyz</code>.</p>
+<pre><code class="lang-js">var letterCombinations = function(digits) {
+  if (digits.length === 0) {
+    return [];
+  }
 
-  function backtrack(i) {
-    if (i === s.length) {
-      res.push([...part]);
+  const phone_map = ["abc", "def", "ghi", "jkl", "mno", "pqrs", "tuv", "wxyz"];
+  const output = [];
+  backtrack("", digits, phone_map, output);
+  return output;
+
+  function backtrack(combination, next_digits, phone_map, output) {
+    if (next_digits.length === 0) {
+      output.push(combination);
       return;
     }
 
-    for (let j = i; j &lt; s.length; j++) {
-      // print i, j, part here: 
-      // 0 0 []
-      // 1 1 ['a']
-      // 2 2 ['a', 'a']
-      // 1 2 ['a']
-      // 0 1 []
-      // 2 2 ['aa']
-      // 0 2 []
-      if (isPalindrome(s, i, j)) {
-        part.push(s.slice(i, j + 1));
-        backtrack(j + 1);
-        part.pop();
-      }
+    const letters = phone_map[next_digits[0] - '2'];
+    for (const letter of letters) {
+      backtrack(combination + letter, next_digits.slice(1), phone_map, output);
     }
   }
-  backtrack(0);
-  return res;
 };
-
-function isPalindrome(s, l, r) {
-  while (l &lt; r) {
-    if (s[l] !== s[r]) return false;
-    l++;
-    r--;
-  }
-  return true;
-}
 </code></pre>
 <p>Given a binary search tree (BST), find the lowest common ancestor node of two given nodes in the BST.</p>
 <pre><code class="lang-js">var lowestCommonAncestor = function(root, p, q) {
@@ -1824,6 +2049,45 @@ function dfs(grid, i, j, rows, cols) {
   return ans;
 };
 </code></pre>
+<p>Given an m x n grid of characters board and a string word, return true if word exists in the grid. The word can be constructed from letters of sequentially adjacent cells (horizontally or vertically).</p>
+<pre><code class="lang-js">var exist = function(board, word) {
+  let m = board.length;
+  let n = board[0].length;
+  let visited = Array.from(Array(m), () =&gt; Array(n).fill(false));
+
+  for (let i = 0; i &lt; m; i++) {
+    for (let j = 0; j &lt; n; j++) {
+      if (backtrack(board, word, i, j, 0, visited))
+        return true;
+    }
+  }
+  return false;
+};
+
+// k is the current position in the word
+function backtrack(board, word, i, j, k, visited) {
+  let m = board.length;
+  let n = board[0].length;
+
+  if (k === word.length) {
+    return true;
+  }
+
+  if (i &lt; 0 || i &gt;= m || j &lt; 0 || j &gt;= n || visited[i][j] || board[i][j] !== word.charAt(k)) {
+    return false;
+  }
+
+  visited[i][j] = true;
+  if (backtrack(board, word, i + 1, j, k + 1, visited) ||
+      backtrack(board, word, i - 1, j, k + 1, visited) ||
+      backtrack(board, word, i, j + 1, k + 1, visited) ||
+      backtrack(board, word, i, j - 1, k + 1, visited))
+      return true;
+
+  visited[i][j] = false;
+  return false;
+}
+</code></pre>
 <p>Given two words, <code>beginWord</code> and <code>endWord</code>, and a dictionary <code>wordList</code>, return the number of words in the shortest transformation sequence from <code>beginWord</code> to <code>endWord</code>, or 0 if no such sequence exists. Every adjacent pair of words differs by a single letter.</p>
 <pre><code class="lang-js">var ladderLength = function(beginWord, endWord, wordList) {
   let wordSet = new Set(wordList)
@@ -1902,12 +2166,12 @@ function dfs(grid, i, j, rows, cols) {
 };
 </code></pre>
 <p>Best Time to Buy and Sell Stock. You are given an array prices where <code>prices[i]</code> is the price of a given stock on the <code>ith</code> day.</p>
-<p>```js
-// only one transaction
+<pre><code class="lang-js">// only one transaction
 var maxProfit = function(prices) {
   let min = prices[0];
-  let maxProfit = 0;</p>
-<p>for (let i = 0; i &lt; prices.length; i++) {
+  let maxProfit = 0;
+
+  for (let i = 0; i &lt; prices.length; i++) {
     if (prices[i] &lt; min) {
       min = prices[i];
     } else if (prices[i] - min &gt; maxProfit) {
@@ -1915,44 +2179,53 @@ var maxProfit = function(prices) {
     }
   }
   return maxProfit;
-};</p>
-<p>// multiple transactions (greedy)
+};
+
+// multiple transactions (greedy)
 var maxProfit = function(prices) {
-  let maxProfit = 0;</p>
-<p>for (let i = 1; i &lt; prices.length; i++) {
+  let maxProfit = 0;
+
+  for (let i = 1; i &lt; prices.length; i++) {
     if (prices[i] &gt; prices[i - 1]) {
       maxProfit += prices[i] - prices[i - 1];
     }
   }
   return maxProfit;
-};</p>
-<p>// multiple transactions but with transaction fee for each one
+};
+
+// multiple transactions but with transaction fee for each one
 var maxProfit = function(prices, fee) {
   // dp[i] represents two states
   // 1. dp[i][0]: max profit on day i if you hold a stock.
   // 2. dp[i][1]: max profit on day i if you do not hold a stock.
   let dp = Array.from(Array(prices.length), () =&gt; Array(2).fill(0));
   dp[0][0] = 0 - prices[0];
-  dp[0][1] = 0;</p>
-<p>for (let i = 1; i &lt; prices.length; i++) {
+  dp[0][1] = 0;
+
+  for (let i = 1; i &lt; prices.length; i++) {
     dp[i][0] = Math.max(dp[i - 1][0], dp[i - 1][1] - prices[i]);
     dp[i][1] = Math.max(dp[i - 1][0] + prices[i] - fee, dp[i - 1][1]);
-  }</p>
-<p>return dp[prices.length - 1][1];
-};</p>
-<p>// After you sell your stock, you cannot buy stock on the next day
+  }
+
+  return dp[prices.length - 1][1];
+};
+
+// After you sell your stock, you cannot buy stock on the next day
 var maxProfit = function(prices) {
   // dp[i][0]: Holding a stock after day i.
   // dp[i][1]: Not holding a stock after day i without entering a cooldown.
   // dp[i][2]: Just sold a stock on day i.
   // dp[i][3]: In a cooldown after selling stock.
   let dp = Array.from(Array(prices.length), () =&gt; Array(4).fill(0));
-  dp[0][0] = -prices[0];</p>
-<p>for (let i = 1; i &lt; prices.length; ++i) {
+  dp[0][0] = -prices[0];
+
+  for (let i = 1; i &lt; prices.length; ++i) {
     dp[i][0] = Math.max(dp[i - 1][0], dp[i - 1][1] - prices[i], dp[i - 1][3] - prices[i]);
     dp[i][1] = Math.max(dp[i - 1][1], dp[i - 1][3]);
     dp[i][2] = dp[i - 1][0] + prices[i];
     dp[i][3] = dp[i - 1][2];
-  }</p>
-<p>return Math.max(dp[prices.length - 1][1], dp[prices.length - 1][2], dp[prices.length - 1][3]);
-};</p>
+  }
+
+  return Math.max(dp[prices.length - 1][1], dp[prices.length - 1][2], dp[prices.length - 1][3]);
+};
+</code></pre>
