--- a/kexizeroing.github.io/HTTP connection, caching and HTTP_2.html
+++ b/kexizeroing.github.io/HTTP connection, caching and HTTP_2.html
@@ -141,6 +141,17 @@ console.log(await getUserById(1));
 // &gt; logs the user with ID 1 that might have updated fields
 // Cache timed out, `getFreshValue` got invoked to fetch a fresh copy of the user
 </code></pre>
+<h3>Refresh behaviors in Chrome</h3>
+<ul>
+<li><p>Enter from the address bar and press Enter key: You tell the browser to navigate to some page and apply normal resource caching behavior just like clicking a link.</p>
+</li>
+<li><p>Normal reload (<code>F5</code>): This will use the cache but revalidate everything during page load, looking for "304 Not Modified" responses.</p>
+</li>
+<li><p>Hard reload (<code>ctrl + F5</code>): Don't use anything in the cache and force the browser do re-download when making the request.</p>
+</li>
+<li><p>Empty Cache and Hard Reload: Right-click on the Network requests in DevTools, select "Clear browser cache" and then reload the page.</p>
+</li>
+</ul>
 <h3>Revved resources</h3>
 <p>They are some resources that would benefit the most from caching, but this makes them very difficult to update. This is typical of the resources included and linked from each web pages: JavaScript and CSS files change infrequently, but when they change you want them to be updated quickly.</p>
 <p>Web developers invented a technique called <code>revving</code>. Infrequently updated files are named in a specific way: a revision (or version) number is added to the filename, and it doesn't need to be a classical version string like <code>1.1.3</code>. It can be anything that prevent collisions, like a hash or a date. Each new revision is considered as a resource that never changes and that can have an expiration time very far in the future. In order to have the new versions, all the links to them must be changed. This additional complexity is usually taken care of by the tool chain used by web developers.</p>
