--- a/kexizeroing.github.io/HTTP cookies explained and security policy.html
+++ b/kexizeroing.github.io/HTTP cookies explained and security policy.html
@@ -65,6 +65,11 @@ Set-Cookie: mykey=myvalue; SameSite=Strict
 </ul>
 <h3>Cross-site scripting</h3>
 <p>Cross-site scripting (XSS) is a security bug that can affect websites. This bug can allow an attacker to add their own malicious JavaScript code onto the HTML pages displayed to the users. The vulnerabilities most often happen when user input is sent to the server, and the server responds back to the user by displaying a page that includes the user input without validation. XSS also can occur entirely in the client-side without data being sent back and forth between the client and server.</p>
+<ul>
+<li>Attackers exploit user inputs that aren’t properly sanitized, inserting scripts into web pages.</li>
+<li>Such scripts can access sensitive data like cookies or session tokens, leading to potential session hijacking.</li>
+<li>The attack can alter the webpage’s Document Object Model (DOM).</li>
+</ul>
 <p>A common technique for preventing XSS vulnerabilities is "escaping". The purpose of character and string escaping is to make sure that every part of a string is interpreted as a string primitive, not as a control character or code. Escape certain characters (like <code>&lt;</code>, <code>&gt;</code>, <code>&amp;</code>, and <code>"</code>) with HTML entity to prevent them being executed.</p>
 <p>A good test string is <code>&gt;'&gt;"&gt;&lt;img src=x onerror=alert(0)&gt;</code>. If your application doesn't correctly escape this string, you will see an alert and will know that something went wrong. <a href="https://github.com/minimaxir/big-list-of-naughty-strings">The Big List of Naughty Strings</a> is a list of strings which have a high probability of causing issues when used as user-input data.</p>
 <blockquote><p>We do not recommend that you manually escape user-supplied data. Instead, we strongly recommend that you use a templating system or web development framework that provides context-aware auto-escaping. If this is impossible for your website, use existing libraries (e.g., <a href="https://github.com/cure53/DOMPurify">DOMPurify</a>, <a href="https://github.com/component/escape-html">escape-html</a>) that are known to work, and apply them consistently to all user-supplied data.</p>
